test/ll_parser_standard_test.test
BRACKETED EXPRESSION:
    ID 10 is {|x + y|}
BRACKETED EXPRESSION:
    ID 11 is {|x + y|}
ERROR: in line ##: extra stuff at end of line; line ignored:
        z = x * y
              ^^^
ERROR: in line ##: extra stuff at end of line; line ignored:
        w = u - v
              ^^^
BRACKETED EXPRESSION:
    ID 21 is {|x * y|}
BRACKETED EXPRESSION:
    ID 22 is {|u - v|}
BRACKETED EXPRESSION:
    ID 23 is {"": z = {|x * y|}, w = {|u - v|}|x + y|}
BRACKETED EXPRESSION:
    ID 30 is
        {|this is an indented paragraph
          {"": .terminator = [$ INDENTED_PARAGRAPH $], .initiator =
               "::"|{p|{s|with a line and a second line|s}|p}|}|}
BRACKETED EXPRESSION:
    ID 35 is foo
BRACKETED EXPRESSION:
    ID 36 is "fum"
BRACKETED EXPRESSION:
    This is a line with an indented paragraph:
        First line of indented paragraph "."
        Second line of indented paragraph "."
BRACKETED EXPRESSION:
    ID 40 is
        {|This is a code line ending in
          {"": .terminator = [$ INDENTED_PARAGRAPH $], .initiator = ":"|
               {"": .terminator = "<LF>", .initiator =
                    [$ LOGICAL_LINE $]|An indented paragragraph ";" line
                    one "."|}
               {"": .terminator = "<LF>", .initiator =
                    [$ LOGICAL_LINE $]|Line two "."|}|}|}
WARNING: in line ##: name element "." is a mark or separator and
         therefore should be quoted:
          f = ;, . = 99, g = [< m n >] p, h = [< [< m n >] p >]
                 ^
ERROR: in line ##: illegal attribute label `98.21'; attribute ignored:
          d = "ppp", e = "ppp" "qqq", 98.21 = hi, "," = ":",
                                      ^^^^^
BRACKETED EXPRESSION:
    ID 50 is
        {x: h = [< [< m n >] p >], "," = ":", d = ppp, e =
            [< ppp qqq >], a = "quoted string", "." = 99, f = ";", b =
            53.91, g = [< [< m n >] p >], c = [< yyy 53.91 >]|
            "quoted string" 53.91 99 ";" foo|x}
BRACKETED EXPRESSION:
    ID 60 is {"": a = @@ = b, d = @@ = c}
BRACKETED EXPRESSION:
    ID 61 is {"": a = @@ = b}
BRACKETED EXPRESSION:
    ID 70 is {"": e 22.99 = 5, a = [< b 55.44 >], c = @@ = d 77.33}
ERROR: in line ##: line does not begin with a (possibly negated)
       attribute label; line ignored:
    2 = X
    ^^^^^
ERROR: in line ##: line does not begin with a (possibly negated)
       attribute label; line ignored:
    6 = Z
    ^^^^^
ERROR: in line ##: line does not begin with a (possibly negated)
       attribute label; line ignored:
    7.1 = Q
    ^^^^^^^
BRACKETED EXPRESSION:
    ID 80 is
        {"": "8.4.5" = P, F = [< 1 2 3 >], "4" = Y, G = [< M N P >]|A B
             C D E|}
